WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16161
REGRESSION: window.moveBy(0, 0) moves the window by -22px vertically
https://bugs.webkit.org/show_bug.cgi?id=16161
Summary
REGRESSION: window.moveBy(0, 0) moves the window by -22px vertically
Timothy Hatcher
Reported
2007-11-27 11:23:24 PST
Calling window.moveBy(0, 0) moves the window up 22px. This seems to be the height of the window title. Calling window.moveBy(0, -22) does not move the window. See attached test case.
Attachments
Test case
(187 bytes, text/html)
2007-11-27 11:23 PST
,
Timothy Hatcher
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2007-11-27 11:23:47 PST
Created
attachment 17559
[details]
Test case
Timothy Hatcher
Comment 2
2007-11-27 15:06:29 PST
Landed in
r28083
.
http://trac.webkit.org/projects/webkit/changeset/28083
Timothy Hatcher
Comment 3
2007-11-27 15:20:25 PST
This was a regression. It worked in Safari 3 on Leopard.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug