WebCore:

Reviewed by Kevin McCullough.

        Bug 16161: window.moveBy(0, 0) moves the window by -22px vertically
        http://bugs.webkit.org/show_bug.cgi?id=16161

        Removed the "Adjust the window rect to be in the coordinate space of
        the screen rect" step which was always adding (0,22) to the window
        position (on the main screen). Instead, account for screen X and Y
        in the bottom and right constrain step.

        Added more test cases to: fast/dom/Window/window-resize.html

        * bindings/js/kjs_window.cpp:
        (KJS::adjustWindowRect):

LayoutTests:

        Reviewed by Kevin McCullough.

        Bug 16161: window.moveBy(0, 0) moves the window by -22px vertically
        http://bugs.webkit.org/show_bug.cgi?id=16161

        Added test cases for moveBy(0, 0), moveBy(0, 1) and  moveBy(1, 0).

        * fast/dom/Window/window-resize.html:



Canonical link: https://commits.webkit.org/22002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28083 268f45cc-cd09-0410-ab3c-d52691b4dbfc